
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_19__ TYPE_4__ ;
typedef struct TYPE_18__ TYPE_3__ ;
typedef struct TYPE_17__ TYPE_2__ ;
typedef struct TYPE_16__ TYPE_1__ ;


typedef int UINT ;
struct TYPE_19__ {int ServerAdmin; TYPE_1__* Server; } ;
struct TYPE_18__ {int CurrentVersion; } ;
struct TYPE_17__ {int Online; int HubName; } ;
struct TYPE_16__ {scalar_t__ ServerType; int * Cedar; } ;
typedef TYPE_1__ SERVER ;
typedef TYPE_2__ RPC_SET_HUB_ONLINE ;
typedef TYPE_3__ HUB ;
typedef int CEDAR ;
typedef TYPE_4__ ADMIN ;


 int ALog (TYPE_4__*,TYPE_3__*,char*) ;
 int CHECK_RIGHT ;
 int ERR_HUB_NOT_FOUND ;
 int ERR_NOT_ENOUGH_RIGHT ;
 int ERR_NOT_FARM_CONTROLLER ;
 int ERR_NO_ERROR ;
 TYPE_3__* GetHub (int *,int ) ;
 scalar_t__ GetHubAdminOption (TYPE_3__*,char*) ;
 int IncrementServerConfigRevision (TYPE_1__*) ;
 int LockHubList (int *) ;
 int NO_SUPPORT_FOR_BRIDGE ;
 int ReleaseHub (TYPE_3__*) ;
 scalar_t__ SERVER_TYPE_FARM_MEMBER ;
 int SetHubOffline (TYPE_3__*) ;
 int SetHubOnline (TYPE_3__*) ;
 int SiHubUpdateProc (TYPE_3__*) ;
 int UnlockHubList (int *) ;

UINT StSetHubOnline(ADMIN *a, RPC_SET_HUB_ONLINE *t)
{
 SERVER *s = a->Server;
 CEDAR *c = s->Cedar;
 HUB *h;

 if (s->ServerType == SERVER_TYPE_FARM_MEMBER)
 {
  return ERR_NOT_FARM_CONTROLLER;
 }


 NO_SUPPORT_FOR_BRIDGE;

 CHECK_RIGHT;

 LockHubList(c);
 {
  h = GetHub(c, t->HubName);
 }
 UnlockHubList(c);

 if (h == ((void*)0))
 {
  return ERR_HUB_NOT_FOUND;
 }

 if (a->ServerAdmin == 0 && t->Online && GetHubAdminOption(h, "no_online") != 0)
 {
  ReleaseHub(h);
  return ERR_NOT_ENOUGH_RIGHT;
 }

 if (a->ServerAdmin == 0 && t->Online == 0 && GetHubAdminOption(h, "no_offline") != 0)
 {
  ReleaseHub(h);
  return ERR_NOT_ENOUGH_RIGHT;
 }

 if (t->Online)
 {
  ALog(a, h, "LA_SET_HUB_ONLINE");
  SetHubOnline(h);
 }
 else
 {
  ALog(a, h, "LA_SET_HUB_OFFLINE");
  SetHubOffline(h);
 }

 h->CurrentVersion++;
 SiHubUpdateProc(h);

 IncrementServerConfigRevision(s);

 ReleaseHub(h);

 return ERR_NO_ERROR;
}
